nav Z-index fix

--- a/css/style.css
+++ b/css/style.css
@@ -103,6 +103,7 @@ nav{
   width: 100%;
   overflow-y: hidden;
   transition: .8s height linear;
+  z-index: 9999999;
 }
 .nav-toggle{display: none;}
 .logo a{
